Complete all primary features for UP

--- a/up/color.css
+++ b/up/color.css
@@ -9,31 +9,32 @@ html {
   --cyanSel: #E57;
   --lightBlue: #07F;
   --lightBlueSel: #0CC;
+  --black: #000;
+  --blackSel: #000;
   --dark-cyan: #0FF;
   --dark-cyanSel: #35F;
-  --colorful-cyanBg: #224444;
-  --dark-cyanBg: #1a3333;
-  --darker-cyanBg: #112222;
+  --dark-cyanBg: #1a334d;
+  --darker-cyanBg: #122436;
   --dark-lightBlue: #4BF;
   --dark-lightBlueSel: #0EC;
-  --colorful-lightBlueBg: #1a1a4d;
-  --dark-lightBlueBg: #131339;
-  --darker-lightBlueBg: #0d0d26;
+  --dark-lightBlueBg: #1a1a4d;
+  --darker-lightBlueBg: #121236;
   --dark-blue: #55F;
   --dark-blueSel: #0FF;
-  --colorful-blueBg: #1a1a4d;
-  --dark-blueBg: #131339;
-  --darker-blueBg: #0d0d26;
+  --dark-blueBg: #1a1a4d;
+  --darker-blueBg: #121236;
   --dark-red: #F44;
   --dark-redSel: #F80;
-  --colorful-redBg: #660000;
-  --dark-redBg: #4d0000;
-  --darker-redBg: #330000;
+  --dark-redBg: #660000;
+  --darker-redBg: #470000;
   --dark-pink: #F47;
   --dark-pinkSel: #2AF;
-  --colorful-pinkBg: #4d1a4d;
-  --dark-pinkBg: #391339;
-  --darker-pinkBg: #260d26;
+  --dark-pinkBg: #4d1a33;
+  --darker-pinkBg: #361224;
+  --dark-white: #FFF;
+  --dark-whiteSel: #FFF;
+  --dark-whiteBg: #333333;
+  --darker-whiteBg: #242424;
   /* foreground */
   --darkFg:#FFF;
   --lightFg:#000;
