--- a/up/color.sass
+++ b/up/color.sass
@@ -4,7 +4,7 @@ $colors:('pink':#F47, 'red':#B00, 'blue':#00B, 'cyan':#0BB, 'lightBlue':#07F, 'b
 $sels:('pink':#2AF, 'red':#25F, 'blue':#E46, 'cyan':#E57, 'lightBlue':#0CC, 'black':#000)
 
 $dark-colors:('cyan':#0FF, 'lightBlue':#4BF, 'blue':#55F, 'red':#F44, 'pink':#F47, 'white':#FFF)
-$dark-bgs:('cyan':#123, 'lightBlue':#113, 'blue':#113, 'red':#300, 'pink':#312, 'white':#000)
+$dark-bgs:('cyan':#123, 'lightBlue':#113, 'blue':#113, 'red':#311, 'pink':#312, 'white':#000)
 $dark-sels:('cyan':#35F, 'lightBlue':#0EC, 'blue':#0FF, 'red':#F80, 'pink':#2AF, 'white':#FFF)
 html
   @each $name, $color in $colors
@@ -19,7 +19,7 @@ html
   --darkFg:#FFF
   --lightFg:#000
   /* ACTIVE */
-  --color1:var(--dark-blue)
-  --selColor:var(--dark-blueSel)
-  --colorBg:var(--dark-blueBg)
+  --color1:var(--dark-lightBlue)
+  --selColor:var(--dark-lightBlueSel)
+  --colorBg:var(--darker-lightBlueBg)
   --colorFg:var(--darkFg)
