Fix bugs and add production folder

--- a/up/color.css
+++ b/up/color.css
@@ -5,7 +5,7 @@ html {
   --redSel: #25F;
   --blue: #00B;
   --blueSel: #E46;
-  --cyan: #0BB;
+  --cyan: #0AA;
   --cyanSel: #E57;
   --lightBlue: #07F;
   --lightBlueSel: #0CC;
