--- a/up/color.sass
+++ b/up/color.sass
@@ -1,6 +1,6 @@
 @use "sass:map"
 @use "sass:color"
-$colors:('pink':#F47, 'red':#B00, 'blue':#00B, 'cyan':#0BB, 'lightBlue':#07F, 'black':#000)
+$colors:('pink':#F47, 'red':#B00, 'blue':#00B, 'cyan':#0AA, 'lightBlue':#07F, 'black':#000)
 $sels:('pink':#2AF, 'red':#25F, 'blue':#E46, 'cyan':#E57, 'lightBlue':#0CC, 'black':#000)
 
 $dark-colors:('cyan':#0FF, 'lightBlue':#4BF, 'blue':#55F, 'red':#F44, 'pink':#F47, 'white':#FFF)
