--- a/up/index.css
+++ b/up/index.css
@@ -1,5 +1,6 @@
 html {
   margin:1em;
+  margin-top:1.5em;
   font-family:-apple-system, BlinkMacSystemFont, 'Recursive', 'Courier New', monospace;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
@@ -49,7 +50,8 @@ body{
 }
 ::-webkit-scrollbar-thumb {
   background-image: linear-gradient(45deg, transparent 25%, var(--color1) 25%, var(--color1) 50%, transparent 50%, transparent 75%, var(--color1) 75%, var(--color1));
-  background-color: var(--selColor);
+  background-color: var(--colorBg);
+  border:1px solid var(--color1);
   border-radius: 1em;
 }
 ::-webkit-scrollbar-thumb:hover {
@@ -57,6 +59,7 @@ body{
 }
 ::-webkit-scrollbar-thumb:active {
   background-color: var(--selColor);
+  border-color: var(--selColor);
 }
 ::selection {
   color:var(--colorBg);
